--- a/signup_project/templates/signup.html
+++ b/signup_project/templates/signup.html
@@ -16,11 +16,11 @@
             {% csrf_token %}
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" required value="{{userdata.username}}">
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+                <input type="email" class="form-control" id="email" name="email" required value="{{userdata.email}}">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
