--- a/signup_project/templates/login.html
+++ b/signup_project/templates/login.html
@@ -10,7 +10,20 @@
 
 <body>
   <div class="d-flex justify-content-center align-items-center vh-100">
+
+
     <div class="card p-4" style="width: 400px;">
+      {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            {% if message.tags == 'success' %}
+            <div class="alert alert-success" role="alert">
+              {{ message }}
+            </div>
+            {% endif %}
+        {% endfor %}
+    </ul>
+{% endif %}
         <h3 class="text-center mb-4">Login</h3>
         <form method="post">
             {% csrf_token %}
@@ -27,8 +40,7 @@
         <div class="mt-3 text-center">
           <p class="text-danger">{{error}}</p>
         </div>
-        <div class="mt-3 d-flex justify-content-between">
-          <a href="#" class="text-decoration-none">Forgot Password?</a>
+        <div class="mt-3 d-flex justify-content-center">
           <a href="{%url 'signup'%}" class="text-decoration-none">Sign Up</a>
         </div>
     </div>
